# simple-csv

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
examples/: read_all_values.cpp  read_different_types.cpp  read_specific_column.cpp
include/: scsv.hpp  scsv_column.hpp  scsv_result_codes.hpp  scsv_row.hpp  scsv_util.hpp  simple_csv.hpp  simple_csv_column.hpp  simple_csv_result_codes.hpp  simple_csv_row.hpp  simple_csv_util.hpp
tests/: double_test.cc  integer_test.cc  string_test.cc  util.hpp
